--- a/app/src/main/res/layout/listview_car.xml
+++ b/app/src/main/res/layout/listview_car.xml
@@ -1,9 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/label"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:padding="10dip"
-          android:textSize="16sp"
-          android:textStyle="bold" >
-</TextView>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   xmlns:tools="http://schemas.android.com/tools"
+                                   android:id="@+id/cardview_car_details"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:layout_marginStart="@dimen/grids_margin"
+                                   android:layout_marginBottom="@dimen/grids_margin"
+                                   android:clickable="true"
+                                   android:focusable="true"
+                                   app:cardCornerRadius="@dimen/card_corner_radius">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" tools:layout_editor_absoluteX="8dp">
+            <ImageView
+                    android:id="@+id/card_car_photo"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/car_placeholder"
+                    android:contentDescription="@string/car_photo"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/card_car_plate"/>
+
+            <TextView
+                    android:id="@+id/card_car_title"
+                    style="@style/Base.TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/list_item_big_title_size"
+                    tools:text="@string/no_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="8dp" android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/card_car_address"/>
+
+            <TextView
+                    android:id="@+id/card_car_plate"
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_plate"
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="@dimen/list_item_big_subtitle_size"
+                    tools:text="TEST666"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="206dp"
+                    app:layout_constraintEnd_toStartOf="@+id/card_car_photo" android:layout_marginEnd="16dp"
+            />
+
+            <TextView
+                    android:id="@+id/card_car_address"
+                    style="@style/Base.TextAppearance.AppCompat.Small"
+                    android:layout_width="287dp"
+                    android:layout_height="0dp"
+                    android:text="@string/no_address"
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="@dimen/list_item_subtitle_text_size"
+                    tools:text="Atsitiktinė gatvė"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/card_car_title" android:layout_marginBottom="24dp"/>
+
+        </android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
