--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".ui.main.ListFragment" >
+              tools:context=".ListFragment" >
 
     <SearchView
             android:id="@+id/car_search_filter_view"
